# BJD

./: .cursorrules  .gitignore  BJD入门指南.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  业务逻辑全景图.md  产品功能文档.md  后端开发指南-P0功能.md  商业落地方案.md  技术文档.md  项目蓝图.md  项目调研.md  项目调研报告.md
bjd_backend/: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
bjd_backend/bins/server/: Cargo.toml
bjd_backend/bins/server/src/: main.rs
bjd_backend/config/: default.toml  development.toml  production.toml
bjd_backend/crates/api/: Cargo.toml
bjd_backend/crates/api/src/: lib.rs  router.rs
bjd_backend/crates/api/src/handlers/: health_handler.rs  mod.rs  user_handler.rs
bjd_backend/crates/api/src/middleware/: auth.rs
bjd_backend/crates/api/src/request/: mod.rs  user_req.rs
bjd_backend/crates/application/: Cargo.toml
bjd_backend/crates/application/src/: lib.rs
bjd_backend/crates/application/src/dtos/: mod.rs  user_dto.rs
bjd_backend/crates/application/src/services/: mod.rs  user_service.rs
bjd_backend/crates/common/: Cargo.toml
bjd_backend/crates/common/src/: error.rs  response.rs
bjd_backend/crates/domain/: Cargo.toml
bjd_backend/crates/domain/src/: lib.rs
bjd_backend/crates/domain/src/cache/: mod.rs
bjd_backend/crates/domain/src/user/: entity.rs  mod.rs  repo.rs  vo.rs
bjd_backend/crates/infrastructure/: Cargo.toml
bjd_backend/crates/infrastructure/src/: lib.rs
bjd_backend/crates/infrastructure/src/config/: mod.rs
bjd_backend/crates/infrastructure/src/models/: mod.rs  user_model.rs
bjd_backend/crates/infrastructure/src/postgres/: mod.rs  user_repo.rs
bjd_backend/crates/infrastructure/src/redis/: cache.rs  mod.rs
bjd_backend/docs/: README_CN.md  backend_spec.md
bjd_backend/migrations/: 20241217000000_create_users_table.up.sql
docs/features/: 01_认证体系.md  02_地址支付.md  03_商品浏览.md  04_订单履约.md  05_转单系统.md  06_工作台.md  07_社交广场.md  08_娃娃档案.md  09_许愿池.md  10_游戏化.md  11_知识库.md  12_入驻体系.md  13_妆师模块.md  14_搜索与首页.md  README.md
scripts/: download_images.cjs
src/: App.jsx  index.css
src/components/: AfterBeforeSlider.jsx  Carousel.jsx  PKCard.jsx  PublishMenu.jsx  TabBar.jsx  TrustTimeline.jsx  UserSwitcher.jsx
src/context/: AppContext.jsx
src/data/: apiMock.js  mock.js  scraped_data.json
(+65 files in other folders)
