[workspace]
resolver = "2"
members = [
    "crates/*",
    "bins/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["BJD Team"]
license = "MIT"
repository = "https://github.com/bjd/bjd_backend"

[workspace.dependencies]
# Web Framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "timeout", "trace"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

# Redis
fred = { version = "9", features = ["enable-rustls", "partial-tracing"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error Handling
thiserror = "2"
anyhow = "1"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Date & Time
chrono = { version = "0.4", features = ["serde"] }

# ID Generation
ulid = { version = "1", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Configuration
config = "0.14"

# Security
secrecy = { version = "0.10", features = ["serde"] }

# Async Trait
trait-variant = "0.1"

# Internal Crates
axum-common = { path = "crates/common" }
axum-domain = { path = "crates/domain" }
axum-application = { path = "crates/application" }
axum-infrastructure = { path = "crates/infrastructure" }
axum-api = { path = "crates/api" }

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"
unwrap_used = "deny"
expect_used = "warn"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
