[package]
name = "axum-api"
version.workspace = true
edition.workspace = true

[dependencies]
axum-common.workspace = true
axum-domain.workspace = true
axum-application.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
ulid.workspace = true
validator.workspace = true
